@@ -287,12 +287,6 @@
 		-->
 		<add key="TrackBugHistory" value="1" />
 
-		<!--
-			Sort order of comments and history.
-			"desc" is most recent first.
-			"asc" is oldest first.
-		-->
-		<add key="CommentSortOrder" value="desc"/>
 
 		<!--
 			When per-project permission is not specified, what is the permission?
