@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.9.3 Oct 5, 2008
+Version 2.9.4 Oct xx, 2008
 
 
 <p>
