@@ -714,3 +714,14 @@ sn_seen int not null
 )
 
 create unique index sn_index_1 on bug_user_seen (sn_bug, sn_user)
+
+
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+-- upgrade from 2.9.3 to 2.9.4
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+-----------------------------------------------------------------------
+
+alter table bug_posts add bp_email_cc nvarchar(800) null
